src/objects/Revisit__c.object
<CustomObject>
    <fields>
        <fullName>Attended_By_Sales_Executive__c</fullName>
        <label>Attended By Sales Executive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_of_Visit__c</fullName>
        <label>Date of Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intime__c</fullName>
        <label>Intime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Revisits</relationshipLabel>
        <relationshipName>Revisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outtime__c</fullName>
        <label>Outtime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Representative_Comments__c</fullName>
        <label>Representative Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revisit_Form_No__c</fullName>
        <label>Revisit Form No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revisit__c</fullName>
        <label>Revisits</label>
        <picklist>
            <picklistValues>
                <fullName>Revisits 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisits 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revisits 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Revisit</label>
    <nameField>
        <label>Revisit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revisits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>